Commiting Backup Files

--- a/Restaurante/Subpaginas/Comentarios.html
+++ b/Restaurante/Subpaginas/Comentarios.html
@@ -8,9 +8,9 @@
     <title>Comentarios</title>
 
     <!-- Styles -->
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/animate.min.css'>
-    <link rel='stylesheet' href="../assets-paginaDIWEB/css/style-rest.css"/>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/animate.min.css'>
+    <link rel='stylesheet' href="../assets-DIWEB-T3/css/style-rest.css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -20,7 +20,7 @@
 
 <!-- Cabecera
 ==============================-->
-<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
+<header class="navbar navbar-inverse navbar-fixed-top header" role="banner">
     <div class="container">
 
         <!-- Menu collapse -->
@@ -39,7 +39,7 @@
         <!-- Menu navegación -->
         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="../../Restaurante/Subpaginas/Platos.html">Platos</a></li>
+                <li><a href="../../Restaurante/Subpaginas/menus.html">Platos</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Reserva.html">Reserva</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Galeria.html">Galería</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Comentarios.html">Comentarios</a></li>
@@ -49,8 +49,58 @@
     </div>
 </header>
 
-<!-- Push -->
-<div class="push">
+<!-- Contenido -->
+<div class="fondo-menu inicio">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="comentario-sec">
+                <div class="container">
+                    <div class="row">
+                        <h5>Pedro Martinez <small> Día 1/02/2029</small></h5>
+                    </div>
+                    <div class="row">
+                        <p>Gran sitio y mu buena comida y to eso. <br>  Sed ligula magna, laoreet suscipit accumsan vel, feugiat sodales diam.  Sed ligula magna, laoreet suscipit accumsan vel, feugiat sodales diam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="comentario-sec">
+                <div class="container">
+                    <div class="row">
+                        <h5 class="right"><small> Día 3/03/2022 </small> Marta Mar Martín </h5>
+                    </div>
+                    <div class="row">
+                        <p class="right">Me ha gustado, le doy 10/10 y volveré si se puede asique vamos a tope de power a ir a full con ello. Un abraso. <br> Sed ligula magna, laoreet suscipit accumsan vel, feugiat sodales diam.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="comentario-sec">
+                <div class="container">
+                    <div class="row">
+                        <h5>Pijus Maximus <small> Día 4/01/500 A.C</small></h5>
+                    </div>
+                    <div class="row">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam felis erat, laoreet at tortor vitae, lobortis mollis orci. Duis vulputate ipsum eu interdum euismod. Suspendisse congue aliquam ipsum. Nulla eget urna ut dolor ultrices interdum quis id erat.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="comentario-sec">
+                <div class="container">
+                    <div class="row">
+                        <h5 class="right"><small> Día 5/01/501 A.C </small> Biggus Dickus </h5>
+                    </div>
+                    <div class="row">
+                        <p class="right">Nullam faucibus, odio in interdum malesuada, nisl augue euismod mauris, eget dapibus ligula erat a tellus. Sed ligula magna, laoreet suscipit accumsan vel, feugiat sodales diam. Nunc imperdiet finibus est eget sodales. Mauris at blandit massa, non congue arcu.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <!-- Footer -->
@@ -58,16 +108,16 @@
     <div class="container-fluid">
         <div class="row footer-up">
 
-            <div class="col-md-12 flex">
+            <div class="col-md-12 flex-inline">
 
                 <div class="left-social">
                     <h6 class="mb-0">Echale un ojo a nuestras redes sociales: </h6>
                 </div>
 
-                <div class="social flex">
-                    <a class="fa fa-facebook white-text"></a>
-                    <a class="fa fa-twitter white-text"></a>
-                    <a class="fa fa-instagram white-text"></a>
+                <div class="social flex-inline">
+                    <a class="fa fa-facebook white-text" href=""></a>
+                    <a class="fa fa-twitter white-text" href=""></a>
+                    <a class="fa fa-instagram white-text" href=""></a>
                     <a class="icons-sm pin-ic"><i class="fa fa-pinterest fa-lg white-text"> </i></a>
                 </div>
 
@@ -77,8 +127,8 @@
         <div class="row">
 
             <div class="col-md-6 footer-content">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="title">Contenido en Footer</h5>
+                <p>Datos de la empresa, contacto, lacalización o <a href="../Restaurante/Subpaginas/Localizacion.html">enlaces a página</a></p>
             </div>
 
         </div>
@@ -93,13 +143,13 @@
 
 <!-- Scripts
 ========================-->
-<script src="../assets-paginaDIWEB/js/jquery.min.js"></script>
-<script src="../assets-paginaDIWEB/js/bootstrap.min.js"></script>
-<script src="../assets-paginaDIWEB/js/waypoints.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.scrollTo.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.localScroll.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.magnific-popup.min.js"></script>
-<script src="../assets-paginaDIWEB/js/script_rest.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.min.js"></script>
+<script src="../assets-DIWEB-T3/js/bootstrap.min.js"></script>
+<script src="../assets-DIWEB-T3/js/waypoints.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.scrollTo.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.localScroll.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.magnific-popup.min.js"></script>
+<script src="../assets-DIWEB-T3/js/script_rest.js"></script>
 
 
 
