--- a/Restaurante/Subpaginas/Platos.html
+++ b/Restaurante/Subpaginas/Platos.html
@@ -8,9 +8,9 @@
     <title>Platos</title>
 
     <!-- Styles -->
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/animate.min.css'>
-    <link rel='stylesheet' href="../assets-paginaDIWEB/css/style-rest.css"/>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/animate.min.css'>
+    <link rel='stylesheet' href="../assets-DIWEB-T3/css/style-rest.css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -20,7 +20,7 @@
 
 <!-- Cabecera
 ==============================-->
-<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
+<header class="navbar navbar-inverse navbar-fixed-top header" role="banner">
     <div class="container">
 
         <!-- Menu collapse -->
@@ -39,7 +39,7 @@
         <!-- Menu navegación -->
         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="../../Restaurante/Subpaginas/Platos.html">Platos</a></li>
+                <li><a href="../../Restaurante/Subpaginas/menus.html">Platos</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Reserva.html">Reserva</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Galeria.html">Galería</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Comentarios.html">Comentarios</a></li>
@@ -49,8 +49,201 @@
     </div>
 </header>
 
-<!-- Push -->
-<div class="push">
+<!-- Submenu -->
+<div class="container-fluid">
+    <div class="container">
+        <div class="row">
+            <ul>
+                <li><a href="../../Restaurante/Subpaginas/Platos.html"> Platos Individuales</a></li>
+                <li><a href="../../Restaurante/Subpaginas/menus.html"> Menus</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<!-- Submenu -->
+<div class="container-fluid navbar navbar-inverse">
+    <div class="container">
+        <div class="row">
+            <ul class="nav navbar-nav submenu">
+                <li><a href="../../Restaurante/Subpaginas/Platos.html"> Platos Individuales</a></li>
+                <li><a href="../../Restaurante/Subpaginas/menus.html"> Menus</a></li>
+            </ul>
+        </div>
+    </div>
+</div>
+
+<div class="container-fluid fondo-menu platos">
+    <div class="container">
+
+            <h1 class="amarillento-text">Entrantes</h1>
+            <div class="row  text-center">
+
+                <div class="articulo-platoInd col-md-3 col-sm-3">
+                    <h6>Entrante normal</h6>
+                    <p>Entrante normal, poquito</p>
+                    <p class="precio amarillento-text">3 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-3">
+                    <h6>Entrante picante</h6>
+                    <p>Igual que el anterior pero pica</p>
+                    <p class="precio amarillento-text">4 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-3">
+                    <h6>Entrante dulce</h6>
+                    <p>Lo mismo pero con dulce</p>
+                    <p class="precio amarillento-text">3 &euro;</p>
+                </div>
+
+            </div>
+
+            <h1 class="amarillento-text titulo-palo">Plato principal</h1>
+            <div class="row  text-center">
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Carne con pataticas fritas</h6>
+                    <p>Ternera con puré o patatas fritas</p>
+                    <p class="precio amarillento-text">11 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Pescado con pataticas</h6>
+                    <p>Merluza con papas o puré</p>
+                    <p class="precio amarillento-text">9 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Entrecot poderoso</h6>
+                    <p>Entrecot con salsa bbq</p>
+                    <p class="precio amarillento-text">13 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Sopa con tropezoncicos</h6>
+                    <p>Sopa con cosas</p>
+                    <p class="precio amarillento-text">7 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Ensaladaca</h6>
+                    <p>Ensalada con tomate y eso</p>
+                    <p class="precio amarillento-text">25 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Sopa sin tropezones</h6>
+                    <p>Sopa sin cosas</p>
+                    <p class="precio amarillento-text">6.99 &euro;</p>
+                </div>
+            </div>
+
+            <h1 class="amarillento-text titulo-palo">Segundo plato</h1>
+            <div class="row  text-center">
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Más carne</h6>
+                    <p>Pollo, cerdo o pavo</p>
+                    <p class="precio amarillento-text">14 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Más pescao</h6>
+                    <p>Lenguado, boquerones o calamar</p>
+                    <p class="precio amarillento-text">15 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Más ensalada</h6>
+                    <p>Otro tipo de ensalada</p>
+                    <p class="precio amarillento-text">5.95 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Más sopa</h6>
+                    <p>Caldo de pollo o cocido</p>
+                    <p class="precio amarillento-text">9.99 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Pasta</h6>
+                    <p>Macarrones con tomatico</p>
+                    <p class="precio amarillento-text">10 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-3 col-sm-5">
+                    <h6>Cosa rica</h6>
+                    <p>Plato aleatorio</p>
+                    <p class="precio amarillento-text">7.5 &euro;</p>
+                </div>
+            </div>
+
+            <h1 class="amarillento-text titulo-palo">Postres</h1>
+            <div class="row  text-center">
+                <div class="articulo-platoInd col-md-2 col-sm-5">
+                    <h6>Helados</h6>
+                    <p>Natachoc o fresa</p>
+                    <p class="precio amarillento-text">3 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-2 col-sm-5">
+                    <h6>Flan</h6>
+                    <p>Con o sin nata</p>
+                    <p class="precio amarillento-text">4 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-2 col-sm-5">
+                    <h6>Yogurt</h6>
+                    <p>Todos los sabores</p>
+                    <p class="precio amarillento-text">3 &euro;</p>
+                </div>
+
+                <div class="articulo-platoInd col-md-2 col-sm-5">
+                    <h6>Mousse</h6>
+                    <p>De limón o naranja</p>
+                    <p class="precio amarillento-text">3 &euro;</p>
+                </div>
+
+            </div>
+
+            <h1 class="amarillento-text titulo-palo">Bebidas</h1>
+            <div class="row  text-center">
+                <div class="row  text-center">
+
+                    <div class="articulo-platoInd bebidas-platoInd col-md-3 col-sm-5">
+                        <h6>Cerveza</h6>
+                        <p class="precio amarillento-text">2 &euro;</p>
+                    </div>
+
+                    <div class="articulo-platoInd bebidas-platoInd col-md-3 col-sm-5">
+                        <h6>Aguarras (Cruzcampo)</h6>
+                        <p class="precio amarillento-text">- &euro;</p>
+                    </div>
+
+                    <div class="articulo-platoInd bebidas-platoInd col-md-3 col-sm-5">
+                        <h6>Agua</h6>
+                        <p class="precio amarillento-text">1.2 &euro;</p>
+                    </div>
+
+                    <div class="articulo-platoInd bebidas-platoInd col-md-3 col-sm-5">
+                        <h6>Agua con Gas</h6>
+                        <p class="precio amarillento-text">2 &euro;</p>
+                    </div>
+
+                    <div class="articulo-platoInd bebidas-platoInd col-md-3 col-sm-5">
+                        <h6>Resfrecos</h6>
+                        <p class="precio amarillento-text">2 &euro;</p>
+                    </div>
+
+                    <div class="articulo-platoInd bebidas-platoInd col-md-3 col-sm-5">
+                        <h6>Té o café</h6>
+                        <p class="precio amarillento-text">1.2 &euro;</p>
+                    </div>
+                </div>
+            </div>
+
+    </div>
 </div>
 
 <!-- Footer -->
@@ -58,16 +251,16 @@
     <div class="container-fluid">
         <div class="row footer-up">
 
-            <div class="col-md-12 flex">
+            <div class="col-md-12 flex-inline">
 
                 <div class="left-social">
                     <h6 class="mb-0">Echale un ojo a nuestras redes sociales: </h6>
                 </div>
 
-                <div class="social flex">
-                    <a class="fa fa-facebook white-text"></a>
-                    <a class="fa fa-twitter white-text"></a>
-                    <a class="fa fa-instagram white-text"></a>
+                <div class="social flex-inline">
+                    <a class="fa fa-facebook white-text" href=""></a>
+                    <a class="fa fa-twitter white-text" href=""></a>
+                    <a class="fa fa-instagram white-text" href=""></a>
                     <a class="icons-sm pin-ic"><i class="fa fa-pinterest fa-lg white-text"> </i></a>
                 </div>
 
@@ -77,8 +270,8 @@
         <div class="row">
 
             <div class="col-md-6 footer-content">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="title">Contenido en Footer</h5>
+                <p>Datos de la empresa, contacto, lacalización o <a href="../Restaurante/Subpaginas/Localizacion.html">enlaces a página</a></p>
             </div>
 
         </div>
@@ -93,13 +286,13 @@
 
 <!-- Scripts
 ========================-->
-<script src="../assets-paginaDIWEB/js/jquery.min.js"></script>
-<script src="../assets-paginaDIWEB/js/bootstrap.min.js"></script>
-<script src="../assets-paginaDIWEB/js/waypoints.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.scrollTo.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.localScroll.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.magnific-popup.min.js"></script>
-<script src="../assets-paginaDIWEB/js/script_rest.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.min.js"></script>
+<script src="../assets-DIWEB-T3/js/bootstrap.min.js"></script>
+<script src="../assets-DIWEB-T3/js/waypoints.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.scrollTo.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.localScroll.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.magnific-popup.min.js"></script>
+<script src="../assets-DIWEB-T3/js/script_rest.js"></script>
 
 
 </body>
