--- a/Restaurante/Subpaginas/Galeria.html
+++ b/Restaurante/Subpaginas/Galeria.html
@@ -8,9 +8,9 @@
     <title>Galeria</title>
 
     <!-- Styles -->
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/animate.min.css'>
-    <link rel='stylesheet' href="../assets-paginaDIWEB/css/style-rest.css"/>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/animate.min.css'>
+    <link rel='stylesheet' href="../assets-DIWEB-T3/css/style-rest.css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -20,7 +20,7 @@
 
 <!-- Cabecera
 ==============================-->
-<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
+<header class="navbar navbar-inverse navbar-fixed-top header" role="banner">
     <div class="container">
 
         <!-- Menu collapse -->
@@ -39,7 +39,7 @@
         <!-- Menu navegación -->
         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="../../Restaurante/Subpaginas/Platos.html">Platos</a></li>
+                <li><a href="../../Restaurante/Subpaginas/menus.html">Platos</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Reserva.html">Reserva</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Galeria.html">Galería</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Comentarios.html">Comentarios</a></li>
@@ -49,8 +49,154 @@
     </div>
 </header>
 
+<!-- Contenido -->
+<div class="container-fluid fondo-menu">
+    <div class="container">
+        <h2 style="margin-bottom: 5vh;margin-top: 15vh;"> Galeria de imágenes </h2>
+        <div id="main_area">
+            <!-- Slider -->
+            <div class="row">
+                <div class="col-sm-6 col-xs-12" id="slider-thumbs">
+                    <!-- Bottom switcher of slider -->
+                    <ul class="hide-bullets">
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-0">
+                                <img src="../assets-DIWEB-T3/img/galeria/comida1.jpg">
+                            </a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-1"><img src="../assets-DIWEB-T3/img/galeria/comida2.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-2"><img src="../assets-DIWEB-T3/img/galeria/comida3.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-3"><img src="../assets-DIWEB-T3/img/galeria/comida4.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-4"><img src="../assets-DIWEB-T3/img/galeria/comida5.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-5"><img src="../assets-DIWEB-T3/img/galeria/comida6.jpg"></a>
+                        </li>
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-6"><img src="../assets-DIWEB-T3/img/galeria/comida7.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-7"><img src="../assets-DIWEB-T3/img/galeria/comida8.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-8"><img src="../assets-DIWEB-T3/img/galeria/comida9.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-9"><img src="../assets-DIWEB-T3/img/galeria/comida10.jpg"></a>
+                        </li>
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-10"><img src="../assets-DIWEB-T3/img/galeria/comida11.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-11"><img src="../assets-DIWEB-T3/img/galeria/comida12.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-12"><img src="../assets-DIWEB-T3/img/galeria/comida13.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-13"><img src="../assets-DIWEB-T3/img/galeria/comida14.jpg"></a>
+                        </li>
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-14"><img src="../assets-DIWEB-T3/img/galeria/comida15.jpg"></a>
+                        </li>
+
+                        <li class="col-sm-3 col-xs-3">
+                            <a class="thumbnail" id="carousel-selector-15"><img src="../assets-DIWEB-T3/img/galeria/comida16.jpg"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-6">
+                    <div class="col-xs-12" id="slider">
+                        <!-- Top part of the slider -->
+                        <div class="row">
+                            <div class="col-sm-12" id="carousel-bounding-box">
+                                <div class="carousel slide" id="myCarousel">
+                                    <!-- Carousel items -->
+                                    <div class="carousel-inner">
+                                        <div class="active item" data-slide-number="0">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida1.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="1">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida2.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="2">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida3.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="3">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida4.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="4">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida5.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="5">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida6.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="6">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida7.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="7">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida8.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="8">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida9.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="9">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida10.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="10">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida11.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="11">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida12.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="12">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida13.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="13">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida14.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="14">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida15.2.jpg"></div>
+
+                                        <div class="item" data-slide-number="15">
+                                            <img src="../assets-DIWEB-T3/img/galeria/comida16.2.jpg"></div>
+                                    </div>
+
+                                    <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                                        <span class="marcadores"> < </span>
+                                    </a>
+                                    <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                                        <span class="marcadores"> > </span>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </div>
 <!-- Push -->
-<div class="push">
+<div class="push"></div>
 </div>
 
 <!-- Footer -->
@@ -58,16 +204,16 @@
     <div class="container-fluid">
         <div class="row footer-up">
 
-            <div class="col-md-12 flex">
+            <div class="col-md-12 flex-inline">
 
                 <div class="left-social">
                     <h6 class="mb-0">Echale un ojo a nuestras redes sociales: </h6>
                 </div>
 
-                <div class="social flex">
-                    <a class="fa fa-facebook white-text"></a>
-                    <a class="fa fa-twitter white-text"></a>
-                    <a class="fa fa-instagram white-text"></a>
+                <div class="social flex-inline">
+                    <a class="fa fa-facebook white-text" href=""></a>
+                    <a class="fa fa-twitter white-text" href=""></a>
+                    <a class="fa fa-instagram white-text" href=""></a>
                     <a class="icons-sm pin-ic"><i class="fa fa-pinterest fa-lg white-text"> </i></a>
                 </div>
 
@@ -77,8 +223,8 @@
         <div class="row">
 
             <div class="col-md-6 footer-content">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="title">Contenido en Footer</h5>
+                <p>Datos de la empresa, contacto, lacalización o <a href="../Restaurante/Subpaginas/Localizacion.html">enlaces a página</a></p>
             </div>
 
         </div>
@@ -93,14 +239,14 @@
 
 <!-- Scripts
 ========================-->
-<script src="../assets-paginaDIWEB/js/jquery.min.js"></script>
-<script src="../assets-paginaDIWEB/js/bootstrap.min.js"></script>
-<script src="../assets-paginaDIWEB/js/waypoints.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.scrollTo.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.localScroll.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.magnific-popup.min.js"></script>
-<script src="../assets-paginaDIWEB/js/script_rest.js"></script>
-
+<script src="../assets-DIWEB-T3/js/jquery.min.js"></script>
+<script src="../assets-DIWEB-T3/js/bootstrap.min.js"></script>
+<script src="../assets-DIWEB-T3/js/waypoints.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.scrollTo.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.localScroll.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.magnific-popup.min.js"></script>
+<script src="../assets-DIWEB-T3/js/script_rest.js"></script>
+<script src="../assets-DIWEB-T3/js/galery.js"></script>
 
 
 </body>
