--- a/Restaurante/Subpaginas/Reserva.html
+++ b/Restaurante/Subpaginas/Reserva.html
@@ -8,17 +8,20 @@
     <title>Reserva</title>
 
     <!-- Styles -->
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='../assets-paginaDIWEB/css/animate.min.css'>
-    <link rel='stylesheet' href="../assets-paginaDIWEB/css/style-rest.css"/>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='../assets-DIWEB-T3/css/animate.min.css'>
+    <link rel='stylesheet' href="../assets-DIWEB-T3/css/style-rest.css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
     <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+
 </head>
 <body>
 
-<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
+<!-- Cabecera
+==============================-->
+<header class="navbar navbar-inverse navbar-fixed-top header" role="banner">
     <div class="container">
 
         <!-- Menu collapse -->
@@ -37,7 +40,7 @@
         <!-- Menu navegación -->
         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="../../Restaurante/Subpaginas/Platos.html">Platos</a></li>
+                <li><a href="../../Restaurante/Subpaginas/menus.html">Platos</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Reserva.html">Reserva</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Galeria.html">Galería</a></li>
                 <li><a href="../../Restaurante/Subpaginas/Comentarios.html">Comentarios</a></li>
@@ -47,8 +50,50 @@
     </div>
 </header>
 
-<!-- Push -->
-<div class="push">
+<!-- Contenido -->
+<div class="fondo-menu">
+    <div class="contaner-fluid mitad-pagina">
+        <div class="container altura-main-contenido">
+            <br><br>
+            <h3>Realiza tu reserva</h3>
+            <div class="row">
+                <div class="col-md-6 col-sm-6">
+                    <form>
+
+                            <label>Nombre de la reserva
+                                <span class="asteriskField">*</span>
+                            </label>
+                            <input type="text" class="form-control" id="nombre" placeholder="Nombre de reserva">
+
+                            <label>Numero de contacto
+                                <span class="asteriskField">*</span>
+                            </label>
+                            <input type="text" class="form-control" id="numero" placeholder="Numero de contacto...">
+                            <small class="form-text text-muted">No es obligatorio este campo</small>
+
+                    </form>
+                </div>
+
+                <div class="col-md-6 col-sm-6">
+                    <div class="form-group">
+                        <label>Fecha de la reserva
+                            <span class="asteriskField">*</span>
+                        </label>
+                        <div class='input-group date' id='datetimepicker11'>
+
+                            <input type='text' class="form-control" id="fecha"/>
+                            <span class="input-group-addon">
+                                <span class="fa fa-calendar"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+                <button onclick="Enviar()" type="button" class="btn btn-primary btn-block"> Realizar reserva </button>
+            <br><br>
+        </div>
+    </div>
 </div>
 
 <!-- Footer -->
@@ -56,16 +101,16 @@
     <div class="container-fluid">
         <div class="row footer-up">
 
-            <div class="col-md-12 flex">
+            <div class="col-md-12 flex-inline">
 
                 <div class="left-social">
                     <h6 class="mb-0">Echale un ojo a nuestras redes sociales: </h6>
                 </div>
 
-                <div class="social flex">
-                    <a class="fa fa-facebook white-text"></a>
-                    <a class="fa fa-twitter white-text"></a>
-                    <a class="fa fa-instagram white-text"></a>
+                <div class="social flex-inline">
+                    <a class="fa fa-facebook white-text" href=""></a>
+                    <a class="fa fa-twitter white-text" href=""></a>
+                    <a class="fa fa-instagram white-text" href=""></a>
                     <a class="icons-sm pin-ic"><i class="fa fa-pinterest fa-lg white-text"> </i></a>
                 </div>
 
@@ -75,8 +120,8 @@
         <div class="row">
 
             <div class="col-md-6 footer-content">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="title">Contenido en Footer</h5>
+                <p>Datos de la empresa, contacto, lacalización o <a href="../Restaurante/Subpaginas/Localizacion.html">enlaces a página</a></p>
             </div>
 
         </div>
@@ -91,13 +136,26 @@
 
 <!-- Scripts
 ========================-->
-<script src="../assets-paginaDIWEB/js/jquery.min.js"></script>
-<script src="../assets-paginaDIWEB/js/bootstrap.min.js"></script>
-<script src="../assets-paginaDIWEB/js/waypoints.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.scrollTo.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.localScroll.min.js"></script>
-<script src="../assets-paginaDIWEB/js/jquery.magnific-popup.min.js"></script>
-<script src="../assets-paginaDIWEB/js/script_rest.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.min.js"></script>
+<script src="../assets-DIWEB-T3/js/bootstrap.min.js"></script>
+<script src="../assets-DIWEB-T3/js/waypoints.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.scrollTo.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.localScroll.min.js"></script>
+<script src="../assets-DIWEB-T3/js/jquery.magnific-popup.min.js"></script>
+<script src="../assets-DIWEB-T3/js/script_rest.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+
+<script type="text/javascript">
+    $(function () {
+        $('#datetimepicker11').datetimepicker({
+            daysOfWeekDisabled: [0, 6]
+        });
+    });
+</script>
 
 </body>
 </html>
