--- a/Restaurante/index.html
+++ b/Restaurante/index.html
@@ -8,9 +8,9 @@
     <title>Restaurante</title>
 
     <!-- Styles -->
-    <link rel='stylesheet' href='assets-paginaDIWEB/css/bootstrap.min.css'>
-    <link rel='stylesheet' href='assets-paginaDIWEB/css/animate.min.css'>
-    <link rel='stylesheet' href="assets-paginaDIWEB/css/style-rest.css"/>
+    <link rel='stylesheet' href='assets-DIWEB-T3/css/bootstrap.min.css'>
+    <link rel='stylesheet' href='assets-DIWEB-T3/css/animate.min.css'>
+    <link rel='stylesheet' href="assets-DIWEB-T3/css/style-rest.css"/>
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
 
     <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -20,7 +20,7 @@
 
 <!-- Cabecera
 ==============================-->
-<header id="header" class="navbar navbar-inverse navbar-fixed-top" role="banner">
+<header class="navbar navbar-inverse navbar-fixed-top header" role="banner">
     <div class="container">
 
         <!-- Menu collapse -->
@@ -39,7 +39,7 @@
         <!-- Menu navegación -->
         <nav class="collapse navbar-collapse bs-navbar-collapse navbar-right" role="navigation">
             <ul class="nav navbar-nav">
-                <li><a href="../Restaurante/Subpaginas/Platos.html">Platos</a></li>
+                <li><a href="../Restaurante/Subpaginas/menus.html">Platos</a></li>
                 <li><a href="../Restaurante/Subpaginas/Reserva.html">Reserva</a></li>
                 <li><a href="../Restaurante/Subpaginas/Galeria.html">Galería</a></li>
                 <li><a href="../Restaurante/Subpaginas/Comentarios.html">Comentarios</a></li>
@@ -67,13 +67,13 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="item active">
-                            <img src="assets-paginaDIWEB/img/rest1.jpg">
+                            <img src="assets-DIWEB-T3/img/rest1.jpg">
                         </div>
                         <div class="item">
-                            <img src="assets-paginaDIWEB/img/rest2.jpg">
+                            <img src="assets-DIWEB-T3/img/rest2.jpg">
                         </div>
                         <div class="item">
-                            <img src="assets-paginaDIWEB/img/rest3.jpg">
+                            <img src="assets-DIWEB-T3/img/rest3.jpg">
                         </div>
                     </div>
                     <a class="left carousel-control" href="#Carousel" data-slide="prev">
@@ -115,11 +115,6 @@
     </div>
 </div>
 
-
-<!-- Push
-<div class="push">
-</div> -->
-
 <!-- Footer -->
 <footer class="page-footer center-on-small-only">
     <div class="container-fluid">
@@ -144,8 +139,8 @@
         <div class="row">
 
             <div class="col-md-6 footer-content">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
+                <h5 class="title">Contenido en Footer</h5>
+                <p>Datos de la empresa, contacto, lacalización o <a href="../Restaurante/Subpaginas/Localizacion.html">enlaces a página</a></p>
             </div>
 
         </div>
@@ -160,13 +155,13 @@
 
 <!-- Scripts
 ========================-->
-<script src="assets-paginaDIWEB/js/jquery.min.js"></script>
-<script src="assets-paginaDIWEB/js/bootstrap.min.js"></script>
-<script src="assets-paginaDIWEB/js/waypoints.min.js"></script>
-<script src="assets-paginaDIWEB/js/jquery.scrollTo.min.js"></script>
-<script src="assets-paginaDIWEB/js/jquery.localScroll.min.js"></script>
-<script src="assets-paginaDIWEB/js/jquery.magnific-popup.min.js"></script>
-<script src="assets-paginaDIWEB/js/script_rest.js"></script>
+<script src="assets-DIWEB-T3/js/jquery.min.js"></script>
+<script src="assets-DIWEB-T3/js/bootstrap.min.js"></script>
+<script src="assets-DIWEB-T3/js/waypoints.min.js"></script>
+<script src="assets-DIWEB-T3/js/jquery.scrollTo.min.js"></script>
+<script src="assets-DIWEB-T3/js/jquery.localScroll.min.js"></script>
+<script src="assets-DIWEB-T3/js/jquery.magnific-popup.min.js"></script>
+<script src="assets-DIWEB-T3/js/script_rest.js"></script>
 
 </body>
 </html>
